--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,5 +1,8 @@
 <mvc:View
+    controllerName="ui5.walkthrough.controller.App"
     xmlns="sap.m"
     xmlns:mvc="sap.ui.core.mvc">
-    <Text text="Olá Comradennn!"></Text>
+    <Button 
+        text="Diga Olá!"
+        press=".onShowHello"/>
 </mvc:View>
