--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -5,4 +5,9 @@
     <Button 
         text="Diga Olá!"
         press=".onShowHello"/>
+    <Input 
+        value="{/recipient/name}"
+        description="Olá {/recipient/name}"
+        valueLiveUpdate="true"
+        width="60%"/>
 </mvc:View>
