--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -3,7 +3,7 @@
     xmlns="sap.m"
     xmlns:mvc="sap.ui.core.mvc">
     <Button 
-        text="Diga Olá!"
+        text="{i18n>showHelloButtonText}"
         press=".onShowHello"/>
     <Input 
         value="{/recipient/name}"
